# OpenWINGS

./: .gitignore  CMakeLists.txt  README.md  config.hpp.in
include/: AboutFrame.hpp  ControlPanel.hpp  ElementPanel.hpp  IOPanel.hpp  MainFrame.hpp  OpenWingsApp.hpp  RelationshipData.hpp  ScaleDialog.hpp  ScaleMainPanel.hpp  config.hpp  helper.hpp  ow_background_gray.xpm  ow_logo.xpm  scalePanel.hpp
src/: AboutFrame.cpp  CMakeLists.txt  ControlPanel.cpp  ElementPanel.cpp  IOPanel.cpp  MainFrame.cpp  OpenWingsApp.cpp  RelationshipData.cpp  ScaleDialog.cpp  ScaleMainPanel.cpp  helper.cpp  main.cpp  scalePanel.cpp
